[Tiers] Fix UM characters on mobile

--- a/assets/tiers/sprites_mobile.css
+++ b/assets/tiers/sprites_mobile.css
@@ -460,22 +460,22 @@
 #MikeGoutokuji.list_characters2, #MikeGoutokuji.tiered_characters2 {
     background-position: -9240px 0;
 }
-#TakaneYamashiro.list_characters2, #TakaneYamashiro.list_characters2 {
+#TakaneYamashiro.list_characters2, #TakaneYamashiro.tiered_characters2 {
     background-position: -9300px 0;
 }
-#SannyoKomakusa.list_characters2, #SannyoKomakusa.list_characters2 {
+#SannyoKomakusa.list_characters2, #SannyoKomakusa.tiered_characters2 {
     background-position: -9360px 0;
 }
-#MisumaruTamatsukuri.list_characters2, #MisumaruTamatsukuri.list_characters2 {
+#MisumaruTamatsukuri.list_characters2, #MisumaruTamatsukuri.tiered_characters2 {
     background-position: -9420px 0;
 }
-#TsukasaKudamaki.list_characters2, #TsukasaKudamaki.list_characters2 {
+#TsukasaKudamaki.list_characters2, #TsukasaKudamaki.tiered_characters2 {
     background-position: -9480px 0;
 }
-#MegumuIizunamaru.list_characters2, #MegumuIizunamaru.list_characters2 {
+#MegumuIizunamaru.list_characters2, #MegumuIizunamaru.tiered_characters2 {
     background-position: -9540px 0;
 }
-#ChimataTenkyuu.list_characters2, #ChimataTenkyuu.list_characters2 {
+#ChimataTenkyuu.list_characters2, #ChimataTenkyuu.tiered_characters2 {
     background-position: -9600px 0;
 }
 #MomoyoHimemushi.list_characters2, #MomoyoHimemushi.tiered_characters2 {
